Make it possible to disable #define FT_CONFIG_OPTION_USER_BZIP2 setting by -DFT_CONFIG_OPTION_DISABLE_BZIP2 for tools build on systems which don't have native bzip2 support. Ok'ed by mrg@ in PR xsrc/45223.